--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,15 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-07-08 (v3.8.1)
+        <ul>
+          <li>新增票纸评分统计，自动生成，可供参考。</li>
+          <li>调整了部分关于票纸、标签、状态变化等的表述。</li>
+          <li>新增车站：<var>城固</var>、<var>恩平</var>、<var>个旧</var>、<var>鹤壁东</var>、<var>红岛</var>、<var>红河</var>、<var>鄠邑</var>、<var>淮安</var>、<var>绩溪县</var>、<var>剑门关</var>、<var>开平南</var>、<var>乐平市</var>、<var>墨江</var>、<var>宁洱</var>、<var>攀枝花南</var>、<var>邳州东</var>、<var>屏边</var>、<var>祁门</var>、<var>青铜峡</var>、<var>渠县</var>、<var>歙县</var>、<var>四合永</var>、<var>台前</var>、<var>西安西</var>、<var>西昌西</var>、<var>萧县北</var>、<var>宣城</var>、<var>阳平关</var>、<var>榆次</var>、<var>元江</var>、<var>治江</var>。</li>
+          <li>车站组总数达 30 个，车站总数达 740 个，机器数量达 2111 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-06-25 (v3.8.0)
         <ul>
           <li>注意：v3.8.0-beta.3 版本以后、v4.0.0 发布以前，将改为每年更新文件名，放弃与前代的兼容性。这一改动预计不会影响日常使用。如需查阅历史版本请查看 git 库历史记录。</li>
