--- a/rail/tktGener.html
+++ b/rail/tktGener.html
@@ -55,10 +55,10 @@
     <h2>票机评价标准</h2>
     <ol class="list-group">
       <li class="list-group-item list-group-item-danger">0分/极差：刚出票即有瑕疵，半年左右即模糊不清，并有缺失、白条等。</li>
-      <li class="list-group-item list-group-item-warning">1分/很差：一年左右即模糊不清，缺失、白条等。</li>
-      <li class="list-group-item list-group-item-warning">2分/略差：略有模糊，略有不整齐；或两年后褪色明显的。</li>
-      <li class="list-group-item list-group-item-info">3分/尚可：半年左右仍清晰可认，无白条。两年后应仍可明显辨认。</li>
-      <li class="list-group-item list-group-item-success">4分/佳：一年仍清晰锐利，无白条、缺失。</li>
+      <li class="list-group-item list-group-item-warning">1分/很差：一年左右即模糊不清，缺失、白条等多种缺陷。</li>
+      <li class="list-group-item list-group-item-warning">2分/略差：略有模糊、白条、缺失，略有不整齐；或两年后褪色明显的。</li>
+      <li class="list-group-item list-group-item-info">3分/尚可：半年左右仍清晰可认，无白条。两年后应仍可明显辨认。（新打印车票 清晰锐利，无白条、缺失，但采用易褪色类票纸的；或 有极少量难以分辨、不影响整体质量的缺失的 可参考此等级）</li>
+      <li class="list-group-item list-group-item-success">4分/佳：一年仍清晰锐利，无白条、缺失。（新打印车票 清晰锐利，无白条、缺失且未采用易褪色类票纸的 可参考此等级）</li>
       <li class="list-group-item list-group-item-success">5分/佳：两年仍清晰锐利，无白条、缺失等。（特殊等级）</li>
       <li class="list-group-item">红色软质车票由于其抗褪色特性，可以视情况加分。（系统自动完成）</li>
     </ol>
