--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,14 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-07-23 (v3.8.2)
+        <ul>
+          <li>“免费乘车儿童声明”功能更名为“添加免费乘车儿童”；翻译未变动。</li>
+          <li>新增车站：<var>虢镇</var>、<var>眉县东</var>、<var>淄博北</var>。</li>
+          <li>车站组总数达 30 个，车站总数达 743 个，机器数量达 2140 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-07-08 (v3.8.1)
         <ul>
           <li>新增票纸评分统计，自动生成，可供参考。</li>
