--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -85,15 +85,15 @@
     <h2>趋势榜 <small class="text-muted" lang="en">Trend List</small></h2>
     <table class="table">
       <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
-      <tr><td>1</td><td>郑州东</td><td>55</td><td>74</td></tr>
+      <tr><td>1</td><td>郑州东</td><td>56</td><td>79</td></tr>
       <tr><td>2</td><td>长春</td><td>54</td><td>69</td></tr>
       <tr><td>3</td><td>南京南</td><td>53</td><td>68</td></tr>
-      <tr><td>4</td><td>郑州</td><td>51</td><td>73</td></tr>
+      <tr><td>4</td><td>郑州</td><td>51</td><td>74</td></tr>
       <tr><td>5</td><td>北京南</td><td>47</td><td>56</td></tr>
       <tr><td>6</td><td>杭州东</td><td>36</td><td>42</td></tr>
-      <tr><td>7</td><td>北京西</td><td>32</td><td>41</td></tr>
+      <tr><td>7</td><td>北京西</td><td>35</td><td>45</td></tr>
       <tr><td>8</td><td>兰州</td><td>30</td><td>41</td></tr>
-      <tr><td>9</td><td>南京</td><td>28</td><td>35</td></tr>
+      <tr><td>9</td><td>南京</td><td>29</td><td>36</td></tr>
       <tr><td>10</td><td>盐城</td><td>28</td><td>34</td></tr>
     </table>
   </div>
@@ -143,16 +143,15 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-07-08 (v3.8.1)
+        2023-07-23 (v3.8.2)
         <ul>
-          <li>新增票纸评分统计，自动生成，可供参考。</li>
-          <li>调整了部分关于票纸、标签、状态变化等的表述。</li>
-          <li>新增车站：<var>城固</var>、<var>恩平</var>、<var>个旧</var>、<var>鹤壁东</var>、<var>红岛</var>、<var>红河</var>、<var>鄠邑</var>、<var>淮安</var>、<var>绩溪县</var>、<var>剑门关</var>、<var>开平南</var>、<var>乐平市</var>、<var>墨江</var>、<var>宁洱</var>、<var>攀枝花南</var>、<var>邳州东</var>、<var>屏边</var>、<var>祁门</var>、<var>青铜峡</var>、<var>渠县</var>、<var>歙县</var>、<var>四合永</var>、<var>台前</var>、<var>西安西</var>、<var>西昌西</var>、<var>萧县北</var>、<var>宣城</var>、<var>阳平关</var>、<var>榆次</var>、<var>元江</var>、<var>治江</var>。</li>
-          <li>车站组总数达 30 个，车站总数达 740 个，机器数量达 2111 台。</li>
+          <li>“免费乘车儿童声明”功能更名为“添加免费乘车儿童”；翻译未变动。</li>
+          <li>新增车站：<var>虢镇</var>、<var>眉县东</var>、<var>淄博北</var>。</li>
+          <li>车站组总数达 30 个，车站总数达 743 个，机器数量达 2140 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
-        2023-06-25 (v3.8.0)
+        …… 2023-06-25 (v3.8.0)
         <ul>
           <li>注意：v3.8.0-beta.3 版本以后、v4.0.0 发布以前，将改为每年更新文件名，放弃与前代的兼容性。这一改动预计不会影响日常使用。如需查阅历史版本请查看 git 库历史记录。</li>
           <li>新增车站：<var>临潼</var>、<var>牟平</var>、<var>平泉北</var>、<var>兴隆县西</var>。</li>
