--- a/rail/tktGener.html
+++ b/rail/tktGener.html
@@ -256,6 +256,7 @@
           <option value="2">通号 CRSC</option>
           <option value="11">易程 Easyway</option>
           <option value="31">神州数码</option>
+          <option value="35">思源科创 SYKC</option>
         </select>
         <input type="text" class="form-control" id="machbrandTxt" placeholder="例如：易程" size="16" maxlength="16" title="请输入机器的生产厂商。">
       </div>
