--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,11 +61,19 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-07-23 (v3.8.2)
+        <ul>
+          <li>機能「免费乘车儿童声明」の名前を変更。日本語翻訳は変更されていない。</li>
+          <li>新しい駅：<var>虢镇</var>、<var>眉県東</var>、<var>淄博北</var>。</li>
+          <li>記録した駅組 30 個、駅 743 個、機器 2140 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-07-08 (v3.8.1)
         <ul>
           <li>「券紙統計」を導入。自動的に生成されたので、ご参考まで。</li>
           <li>券紙、タグ、状態変化などに関する一部の表記を調整。</li>
-          <li>新しい駅：<var>城固</var>、<var>恩平</var>、<var>个旧</var>、<var>鹤壁东</var>、<var>红岛</var>、<var>红河</var>、<var>鄠邑</var>、<var>淮安</var>、<var>绩溪县</var>、<var>剑门关</var>、<var>开平南</var>、<var>乐平市</var>、<var>墨江</var>、<var>宁洱</var>、<var>攀枝花南</var>、<var>邳州东</var>、<var>屏边</var>、<var>祁门</var>、<var>青铜峡</var>、<var>渠县</var>、<var>歙县</var>、<var>四合永</var>、<var>台前</var>、<var>西安西</var>、<var>西昌西</var>、<var>萧县北</var>、<var>宣城</var>、<var>阳平关</var>、<var>榆次</var>、<var>元江</var>、<var>治江</var>。</li>
+          <li>新しい駅：<var>城固</var>、<var>恩平</var>、<var>个旧</var>、<var>鹤壁東</var>、<var>紅島</var>、<var>紅河</var>、<var>鄠邑</var>、<var>淮安</var>、<var>绩溪県</var>、<var>剑門関</var>、<var>开平南</var>、<var>乐平市</var>、<var>墨江</var>、<var>宁洱</var>、<var>攀枝花南</var>、<var>邳州東</var>、<var>屏辺</var>、<var>祁門</var>、<var>青铜峡</var>、<var>渠県</var>、<var>歙県</var>、<var>四合永</var>、<var>台前</var>、<var>西安西</var>、<var>西昌西</var>、<var>萧県北</var>、<var>宣城</var>、<var>阳平関</var>、<var>榆次</var>、<var>元江</var>、<var>治江</var>。</li>
           <li>記録した駅組 30 個、駅 740 個、機器 2111 個。</li>
         </ul>
       </li>
