--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -54,7 +54,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2023c2.mdx" download><i class="fas fa-download"></i>下载词典 - 2023 年 6 月 25 日版本</a></p>
+    <p><a href="./tktMach2023c2.mdx" download><i class="fas fa-download"></i>下载词典 - 2023 年 7 月 23 日版本</a></p>
   </div>
   <div class="container">
     项目网址：
@@ -93,8 +93,8 @@
       <tr><td>6</td><td>杭州东</td><td>36</td><td>42</td></tr>
       <tr><td>7</td><td>北京西</td><td>35</td><td>45</td></tr>
       <tr><td>8</td><td>兰州</td><td>30</td><td>41</td></tr>
-      <tr><td>9</td><td>南京</td><td>29</td><td>36</td></tr>
-      <tr><td>10</td><td>盐城</td><td>28</td><td>34</td></tr>
+      <tr><td>9</td><td>盐城</td><td>30</td><td>36</td></tr>
+      <tr><td>10</td><td>南京</td><td>29</td><td>37</td></tr>
     </table>
   </div>
   <div class="container my-3">
@@ -143,11 +143,10 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-07-23 (v3.8.2)
+        2023-08-06 (v3.8.3)
         <ul>
-          <li>“免费乘车儿童声明”功能更名为“添加免费乘车儿童”；翻译未变动。</li>
-          <li>新增车站：<var>虢镇</var>、<var>眉县东</var>、<var>淄博北</var>。</li>
-          <li>车站组总数达 30 个，车站总数达 743 个，机器数量达 2140 台。</li>
+          <li>新增车站：<var>青城山</var>。</li>
+          <li>车站组总数达 30 个，车站总数达 743 个，机器数量达 2143 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
