--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-08-06 (v3.8.3)
+        <ul>
+          <li>新增车站：<var>青城山</var>。</li>
+          <li>车站组总数达 30 个，车站总数达 744 个，机器数量达 2147 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-07-23 (v3.8.2)
         <ul>
           <li>“免费乘车儿童声明”功能更名为“添加免费乘车儿童”；翻译未变动。</li>
