--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-08-22 (v3.8.4)
+        <ul>
+          <li>新增车站：<var>天河机场</var>。</li>
+          <li>车站组总数达 30 个，车站总数达 745 个，机器数量达 2163 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-08-06 (v3.8.3)
         <ul>
           <li>新增车站：<var>青城山</var>。</li>
