--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,13 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-09-03 (v3.8.5)
+        <ul>
+          <li>新しい駅：<var>崇州</var>、<var>沙坪壩</var>、<var>新津</var>、<var>新津南</var>、<var>羊馬</var>、<var>肇慶</var>。</li>
+          <li>記録した駅組 30 個、駅 751 個、機器 2180 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-08-22 (v3.8.4)
         <ul>
           <li>新しい駅：<var>天河機場</var>（武漢天河国際空港）。</li>
