--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-09-03 (v3.8.5)
+        <ul>
+          <li>新增车站：<var>崇州</var>、<var>沙坪坝</var>、<var>新津</var>、<var>新津南</var>、<var>羊马</var>、<var>肇庆</var>。</li>
+          <li>车站组总数达 30 个，车站总数达 751 个，机器数量达 2180 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-08-22 (v3.8.4)
         <ul>
           <li>新增车站：<var>天河机场</var>。</li>
