--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -85,13 +85,13 @@
     <h2>趋势榜 <small class="text-muted" lang="en">Trend List</small></h2>
     <table class="table">
       <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
-      <tr><td>1</td><td>郑州东</td><td>59</td><td>83</td></tr>
+      <tr><td>1</td><td>郑州东</td><td>60</td><td>84</td></tr>
       <tr><td>2</td><td>长春</td><td>54</td><td>69</td></tr>
       <tr><td>3</td><td>南京南</td><td>53</td><td>68</td></tr>
       <tr><td>4</td><td>郑州</td><td>51</td><td>74</td></tr>
       <tr><td>5</td><td>北京南</td><td>47</td><td>56</td></tr>
-      <tr><td>6</td><td>杭州东</td><td>36</td><td>42</td></tr>
-      <tr><td>7</td><td>北京西</td><td>35</td><td>45</td></tr>
+      <tr><td>6</td><td>北京西</td><td>36</td><td>47</td></tr>
+      <tr><td>7</td><td>杭州东</td><td>36</td><td>42</td></tr>
       <tr><td>8</td><td>兰州</td><td>30</td><td>41</td></tr>
       <tr><td>9</td><td>南京</td><td>30</td><td>38</td></tr>
       <tr><td>10</td><td>盐城</td><td>30</td><td>36</td></tr>
@@ -143,10 +143,10 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-08-22 (v3.8.4)
+        2023-09-03 (v3.8.5)
         <ul>
-          <li>新增车站：<var>天河机场</var>。</li>
-          <li>车站组总数达 30 个，车站总数达 745 个，机器数量达 2163 台。</li>
+          <li>新增车站：<var>崇州</var>、<var>沙坪坝</var>、<var>新津</var>、<var>新津南</var>、<var>羊马</var>、<var>肇庆</var>。</li>
+          <li>车站组总数达 30 个，车站总数达 751 个，机器数量达 2180 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
