--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,15 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-09-19 (v3.8.6)
+        <ul>
+          <li>「一記録に複数の券」を指示。</li>
+          <li>一部の翻訳を調整。</li>
+          <li>新しい駅：<var>简阳南</var>、<var>新都东</var>、<var>鹰手营子</var>。</li>
+          <li>記録した駅組 30 個、駅 754 個、機器 2189 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-09-03 (v3.8.5)
         <ul>
           <li>新しい駅：<var>崇州</var>、<var>沙坪壩</var>、<var>新津</var>、<var>新津南</var>、<var>羊馬</var>、<var>肇慶</var>。</li>
