--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,15 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-09-19 (v3.8.6)
+        <ul>
+          <li>新增单条目多票提示。</li>
+          <li>调整了部分翻译。</li>
+          <li>新增车站：<var>简阳南</var>、<var>新都东</var>、<var>鹰手营子</var>。</li>
+          <li>车站组总数达 30 个，车站总数达 754 个，机器数量达 2189 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-09-03 (v3.8.5)
         <ul>
           <li>新增车站：<var>崇州</var>、<var>沙坪坝</var>、<var>新津</var>、<var>新津南</var>、<var>羊马</var>、<var>肇庆</var>。</li>
