--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,14 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-10-05 (v3.8.7)
+        <ul>
+          <li>新增车站：<var>安德</var>、<var>安靖</var>、<var>名山</var>、<var>温江</var>、<var>迎宾路</var>。</li>
+          <li>新增车站联合体：<var>甬广高速线(线路)</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 759 个，机器数量达 2204 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-09-19 (v3.8.6)
         <ul>
           <li>新增单条目多票提示。</li>
