--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,14 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-10-05 (v3.8.7)
+        <ul>
+          <li>新しい駅：<var>安徳</var>、<var>安靖</var>、<var>名山</var>、<var>温江</var>、<var>迎賓路</var>。</li>
+          <li>新しい駅組：<var>甬広高速線(線路)</var>。</li>
+          <li>記録した駅組 31 個、駅 759 個、機器 2204 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-09-19 (v3.8.6)
         <ul>
           <li>「一記録に複数の券」を指示。</li>
@@ -212,7 +220,7 @@
         <ul>
           <li>記録「タグ」を追加</li>
           <li>一部の翻訳を調整。</li>
-          <li>新しい駅：<var>德清</var>、<var>鄧州東</var>、<var>温嶺</var>、<var>偃師</var>。</li>
+          <li>新しい駅：<var>徳清</var>、<var>鄧州東</var>、<var>温嶺</var>、<var>偃師</var>。</li>
           <li>ファイル版本番号は <code>2023a</code> にする。</li>
           <li>記録した駅組 29 個、駅 659 個、機器 1783 個。</li>
         </ul>
@@ -602,7 +610,7 @@
         <ul>
           <li>新しい駅：<var>大冶北</var>、<var>華山北</var></li>
         <li>
-          新しい駅組：<var>宝成、成渝線(線路)</var>、<var>昌福線(線路)</var>、<var>成渝高速線(線路)</var>、<var>抚顺線(線路)</var>、<var>广九線(線路)</var>、<var>广深港高速線(線路)</var>、<var>杭深線(線路)</var>、<var>遼寧沈阳(城市)</var>、<var>沈丹客専線(線路)</var>
+          新しい駅組：<var>宝成、成渝線(線路)</var>、<var>昌福線(線路)</var>、<var>成渝高速線(線路)</var>、<var>抚顺線(線路)</var>、<var>広九線(線路)</var>、<var>広深港高速線(線路)</var>、<var>杭深線(線路)</var>、<var>遼寧沈阳(城市)</var>、<var>沈丹客専線(線路)</var>
         </li>
         </ul>
       </li>
