--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-10-20 (v3.8.8)
+        <ul>
+          <li>新增车站：<var>步行街</var>、<var>滁州</var>、<var>大旺</var>、<var>红光镇</var>、<var>彭州南</var>、<var>郫县</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 765 个，机器数量达 2219 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-10-05 (v3.8.7)
         <ul>
           <li>新增车站：<var>安德</var>、<var>安靖</var>、<var>名山</var>、<var>温江</var>、<var>迎宾路</var>。</li>
