--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,13 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-10-20 (v3.8.8)
+        <ul>
+          <li>新しい駅：<var>歩行街</var>、<var>滁州</var>、<var>大旺</var>、<var>紅光鎮</var>、<var>彭州南</var>、<var>郫県</var>。</li>
+          <li>記録した駅組 31 個、駅 765 個、機器 2219 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-10-05 (v3.8.7)
         <ul>
           <li>新しい駅：<var>安徳</var>、<var>安靖</var>、<var>名山</var>、<var>温江</var>、<var>迎賓路</var>。</li>
@@ -102,7 +109,7 @@
         2023-07-23 (v3.8.2)
         <ul>
           <li>機能「免费乘车儿童声明」の名前を変更。日本語翻訳は変更されていない。</li>
-          <li>新しい駅：<var>虢镇</var>、<var>眉県東</var>、<var>淄博北</var>。</li>
+          <li>新しい駅：<var>虢鎮</var>、<var>眉県東</var>、<var>淄博北</var>。</li>
           <li>記録した駅組 30 個、駅 743 個、機器 2140 個。</li>
         </ul>
       </li>
@@ -714,7 +721,7 @@
       <li class="list-group-item">
         2021-02-01(v2.1.2):
         <ul>
-          <li>新しい駅：三间房、烏伊嶺、伊春、佳木斯、南岔、友好、周家、哈爾濱、哈爾濱東、奎屯、日喀则、朗郷、朱砂古镇、梧州、汤池、浩良河、深圳西、绥化、美溪、西安南、西林、長楽、香蘭、斉斉哈爾、斉斉哈爾南</li>
+          <li>新しい駅：三间房、烏伊嶺、伊春、佳木斯、南岔、友好、周家、哈爾濱、哈爾濱東、奎屯、日喀则、朗郷、朱砂古鎮、梧州、汤池、浩良河、深圳西、绥化、美溪、西安南、西林、長楽、香蘭、斉斉哈爾、斉斉哈爾南</li>
           <li>新しい「駅資料」と「駅歴史」欄。</li>
         </ul>
       </li>
