--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -139,11 +139,10 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-10-05 (v3.8.7)
+        2023-10-20 (v3.8.8)
         <ul>
-          <li>新增车站：<var>安德</var>、<var>安靖</var>、<var>名山</var>、<var>温江</var>、<var>迎宾路</var>。</li>
-          <li>新增车站联合体：<var>甬广高速线(线路)</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 759 个，机器数量达 2204 台。</li>
+          <li>新增车站：<var>步行街</var>、<var>滁州</var>、<var>大旺</var>、<var>红光镇</var>、<var>彭州南</var>、<var>郫县</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 765 个，机器数量达 2219 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
