--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-10-31 (v3.8.9)
+        <ul>
+          <li>新增车站：<var>蓟州</var>、<var>拉萨</var>、<var>眉山</var>、<var>眉山东</var>、<var>彭山</var>、<var>青神</var>、<var>山南</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 772 个，机器数量达 2259 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-10-20 (v3.8.8)
         <ul>
           <li>新增车站：<var>步行街</var>、<var>滁州</var>、<var>大旺</var>、<var>红光镇</var>、<var>彭州南</var>、<var>郫县</var>。</li>
