--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,13 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-10-31 (v3.8.9)
+        <ul>
+          <li>新しい駅：<var>薊州</var>、<var>拉薩</var>、<var>眉山</var>、<var>眉山東</var>、<var>彭山</var>、<var>青神</var>、<var>山南</var>。</li>
+          <li>記録した駅組 31 個、駅 772 個、機器 2259 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-10-20 (v3.8.8)
         <ul>
           <li>新しい駅：<var>歩行街</var>、<var>滁州</var>、<var>大旺</var>、<var>紅光鎮</var>、<var>彭州南</var>、<var>郫県</var>。</li>
@@ -80,7 +87,7 @@
         <ul>
           <li>「一記録に複数の券」を指示。</li>
           <li>一部の翻訳を調整。</li>
-          <li>新しい駅：<var>简阳南</var>、<var>新都东</var>、<var>鹰手营子</var>。</li>
+          <li>新しい駅：<var>简阳南</var>、<var>新都東</var>、<var>鹰手营子</var>。</li>
           <li>記録した駅組 30 個、駅 754 個、機器 2189 個。</li>
         </ul>
       </li>
@@ -592,7 +599,7 @@
         <ul>
           <li>「卒業季」ですから、更新頻度はやや下がった。</li>
         <li>
-          新しい駅：<var>霸州</var>、<var>濱海港</var>、<var>昌平</var>、<var>長春</var>、<var>長春西</var>、<var>常州</var>、<var>徳惠</var>、<var>徳州</var>、<var>阜寧</var>、<var>阜寧南</var>、<var>海安</var>、<var>蓟州北</var>、<var>建湖</var>、<var>龙嘉</var>、<var>馬鞍山</var>、<var>蓬莱市</var>、<var>如東</var>、<var>射阳</var>、<var>四平</var>、<var>四平東</var>、<var>泰州</var>、<var>盐城</var>、<var>盐城大丰</var>
+          新しい駅：<var>霸州</var>、<var>濱海港</var>、<var>昌平</var>、<var>長春</var>、<var>長春西</var>、<var>常州</var>、<var>徳惠</var>、<var>徳州</var>、<var>阜寧</var>、<var>阜寧南</var>、<var>海安</var>、<var>薊州北</var>、<var>建湖</var>、<var>龙嘉</var>、<var>馬鞍山</var>、<var>蓬莱市</var>、<var>如東</var>、<var>射阳</var>、<var>四平</var>、<var>四平東</var>、<var>泰州</var>、<var>盐城</var>、<var>盐城大丰</var>
         </li>
           <li>記録した駅は499個、機器は1263個。</li>
         </ul>
