--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -54,7 +54,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2023c2.mdx" download><i class="fas fa-download"></i>下载词典 - 2023 年 10 月 5 日版本</a></p>
+    <p><a href="./tktMach2023c2.mdx" download><i class="fas fa-download"></i>下载词典 - 2023 年 10 月 31 日版本</a></p>
   </div>
   <div class="container">
     项目网址：
@@ -86,15 +86,15 @@
     <table class="table">
       <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
       <tr><td>1</td><td>郑州东</td><td>60</td><td>84</td></tr>
-      <tr><td>2</td><td>长春</td><td>54</td><td>69</td></tr>
-      <tr><td>3</td><td>南京南</td><td>53</td><td>68</td></tr>
+      <tr><td>2</td><td>南京南</td><td>55</td><td>73</td></tr>
+      <tr><td>3</td><td>长春</td><td>54</td><td>69</td></tr>
       <tr><td>4</td><td>郑州</td><td>51</td><td>74</td></tr>
       <tr><td>5</td><td>北京南</td><td>47</td><td>56</td></tr>
       <tr><td>6</td><td>北京西</td><td>36</td><td>47</td></tr>
       <tr><td>7</td><td>杭州东</td><td>36</td><td>42</td></tr>
-      <tr><td>8</td><td>兰州</td><td>30</td><td>41</td></tr>
-      <tr><td>9</td><td>南京</td><td>30</td><td>38</td></tr>
-      <tr><td>10</td><td>盐城</td><td>30</td><td>36</td></tr>
+      <tr><td>8</td><td>兰州</td><td>31</td><td>43</td></tr>
+      <tr><td>9</td><td>盐城</td><td>31</td><td>37</td></tr>
+      <tr><td>10</td><td>南京</td><td>30</td><td>39</td></tr>
     </table>
   </div>
   <div class="container my-3">
@@ -139,10 +139,10 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-10-20 (v3.8.8)
+        2023-10-31 (v3.8.9)
         <ul>
-          <li>新增车站：<var>步行街</var>、<var>滁州</var>、<var>大旺</var>、<var>红光镇</var>、<var>彭州南</var>、<var>郫县</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 765 个，机器数量达 2219 台。</li>
+          <li>新增车站：<var>蓟州</var>、<var>拉萨</var>、<var>眉山</var>、<var>眉山东</var>、<var>彭山</var>、<var>青神</var>、<var>山南</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 772 个，机器数量达 2259 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
