--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,13 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-11-16 (v3.8.10)
+        <ul>
+          <li>新しい駅：<var>彭州</var>。</li>
+          <li>記録した駅組 31 個、駅 773 個、機器 2269 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-10-31 (v3.8.9)
         <ul>
           <li>新しい駅：<var>薊州</var>、<var>拉薩</var>、<var>眉山</var>、<var>眉山東</var>、<var>彭山</var>、<var>青神</var>、<var>山南</var>。</li>
