--- a/rail/tktGener.html
+++ b/rail/tktGener.html
@@ -259,6 +259,7 @@
           <option value="2">通号 CRSC</option>
           <option value="11">易程 Easyway</option>
           <option value="31">神州数码</option>
+          <option value="33">新北洋 SNBC</option>
           <option value="35">思源科创 SYKC</option>
           <option value="250">未知-带有CRH标识</option>
         </select>
