--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -92,7 +92,7 @@
       <tr><td>5</td><td>北京南</td><td>47</td><td>56</td></tr>
       <tr><td>6</td><td>北京西</td><td>36</td><td>47</td></tr>
       <tr><td>7</td><td>杭州东</td><td>36</td><td>42</td></tr>
-      <tr><td>8</td><td>兰州</td><td>31</td><td>43</td></tr>
+      <tr><td>8</td><td>兰州</td><td>32</td><td>45</td></tr>
       <tr><td>9</td><td>盐城</td><td>31</td><td>37</td></tr>
       <tr><td>10</td><td>南京</td><td>30</td><td>39</td></tr>
     </table>
@@ -139,10 +139,10 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-10-31 (v3.8.9)
+        2023-11-16 (v3.8.10)
         <ul>
-          <li>新增车站：<var>蓟州</var>、<var>拉萨</var>、<var>眉山</var>、<var>眉山东</var>、<var>彭山</var>、<var>青神</var>、<var>山南</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 772 个，机器数量达 2259 台。</li>
+          <li>新增车站：<var>彭州</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 773 个，机器数量达 2269 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
