--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -54,7 +54,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2023c2.mdx" download><i class="fas fa-download"></i>下载词典 - 2023 年 10 月 31 日版本</a></p>
+    <p><a href="./tktMach2023c2.mdx" download><i class="fas fa-download"></i>下载词典 - 2023 年 11 月 30 日版本</a></p>
   </div>
   <div class="container">
     项目网址：
@@ -139,10 +139,10 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-11-16 (v3.8.10)
+        2023-11-30 (v3.8.11)
         <ul>
-          <li>新增车站：<var>彭州</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 773 个，机器数量达 2269 台。</li>
+          <li>新增车站：<var>鼎湖东</var>、<var>花城街</var>、<var>花都</var>、<var>庆盛</var>、<var>朝阳湖</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 778 个，机器数量达 2288 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
