--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-11-30 (v3.8.11)
+        <ul>
+          <li>新增车站：<var>鼎湖东</var>、<var>花城街</var>、<var>花都</var>、<var>庆盛</var>、<var>朝阳湖</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 778 个，机器数量达 2288 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-11-16 (v3.8.10)
         <ul>
           <li>新增车站：<var>彭州</var>。</li>
