--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,13 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-11-30 (v3.8.11)
+        <ul>
+          <li>新しい駅：<var>鼎湖東</var>、<var>花城街</var>、<var>花都</var>、<var>庆盛</var>、<var>朝陽湖</var>。</li>
+          <li>記録した駅組 31 個、駅 778 個、機器 2288 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-11-16 (v3.8.10)
         <ul>
           <li>新しい駅：<var>彭州</var>。</li>
