--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,9 +61,16 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2023-12-17 (v3.8.12)
+        <ul>
+          <li>新しい駅：<var>茂県</var>、<var>三星堆</var>、<var>西来</var>、<var>長清</var>、<var>鎮江関</var>、<var>涿州</var>、<var>涿州東</var>。</li>
+          <li>記録した駅組 31 個、駅 785 個、機器 2301 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-11-30 (v3.8.11)
         <ul>
-          <li>新しい駅：<var>鼎湖東</var>、<var>花城街</var>、<var>花都</var>、<var>庆盛</var>、<var>朝陽湖</var>。</li>
+          <li>新しい駅：<var>鼎湖東</var>、<var>花城街</var>、<var>花都</var>、<var>慶盛</var>、<var>朝陽湖</var>。</li>
           <li>記録した駅組 31 個、駅 778 個、機器 2288 個。</li>
         </ul>
       </li>
