--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -139,10 +139,10 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-11-30 (v3.8.11)
+        2023-12-17 (v3.8.12)
         <ul>
-          <li>新增车站：<var>鼎湖东</var>、<var>花城街</var>、<var>花都</var>、<var>庆盛</var>、<var>朝阳湖</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 778 个，机器数量达 2288 台。</li>
+          <li>新增车站：<var>茂县</var>、<var>三星堆</var>、<var>西来</var>、<var>长清</var>、<var>镇江关</var>、<var>涿州</var>、<var>涿州东</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 785 个，机器数量达 2301 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
