--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,13 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-01-03 (v3.8.13) 新年あけましておめでとう！
+        <ul>
+          <li>新しい駅：<var>常平東</var>、<var>東莞</var>、<var>広阳</var>、<var>広州白雲</var>、<var>淮南東</var>、<var>天府機場</var>（成都天府国際空港）、<var>資中北</var>。</li>
+          <li>記録した駅組 31 個、駅 792 個、機器 2335 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-12-17 (v3.8.12)
         <ul>
           <li>新しい駅：<var>茂県</var>、<var>三星堆</var>、<var>西来</var>、<var>長清</var>、<var>鎮江関</var>、<var>涿州</var>、<var>涿州東</var>。</li>
@@ -286,7 +293,7 @@
         2022-10-30 (v3.6.1)
         <ul>
           <li>コードを調整。</li>
-          <li>新しい駅：<var>保山</var>、<var>恩施</var>、<var>富源</var>、<var>黄石北</var>、<var>黄石東</var>、<var>陸良</var>、<var>曲靖</var>、<var>曲靖北</var>、<var>巍山</var>、<var>襄阳東</var>、<var>祥云</var>、<var>小湾東</var>、<var>鐘祥</var>、<var>遵義</var>。</li>
+          <li>新しい駅：<var>保山</var>、<var>恩施</var>、<var>富源</var>、<var>黄石北</var>、<var>黄石東</var>、<var>陸良</var>、<var>曲靖</var>、<var>曲靖北</var>、<var>巍山</var>、<var>襄阳東</var>、<var>祥雲</var>、<var>小湾東</var>、<var>鐘祥</var>、<var>遵義</var>。</li>
         </ul>
       </li>
       <li class="list-group-item">
@@ -341,7 +348,7 @@
         2022-07-03(v3.4.3)
         <ul>
         <li>
-          新しい駅：<var>奉節</var>、<var>焦作西</var>、<var>臨河</var>、<var>宁陵県</var>、<var>濮阳東</var>、<var>神農架</var>、<var>巫山</var>、<var>浠水</var>、<var>云阳</var>、<var>鄭州航空港</var>。
+          新しい駅：<var>奉節</var>、<var>焦作西</var>、<var>臨河</var>、<var>宁陵県</var>、<var>濮阳東</var>、<var>神農架</var>、<var>巫山</var>、<var>浠水</var>、<var>雲阳</var>、<var>鄭州航空港</var>。
         </li>
           <li>一部駅の情報を調整。</li>
           <li>一部データの失効原因を明らかにした。</li>
@@ -697,7 +704,7 @@
         2021-03-22(v2.3.1)
         <ul>
           <li>
-            新しい駅：昌平北、大理、峨眉、峨眉山、淮安東、康庄、連云港東、密云北、石門県北、顺义西、燕岗
+            新しい駅：昌平北、大理、峨眉、峨眉山、淮安東、康庄、連雲港東、密雲北、石門県北、顺义西、燕岗
           </li>
           <li>
             修正：鄭焦城際の表示の不具合
@@ -716,7 +723,7 @@
         2021-03-08(v2.2.2) 婦女節快乐！
         <ul>
           <li lang="en">Happy Women's Day!</li>
-          <li>新しい駅：成都西、福利区、哈爾濱西、漢中、連云港、渑池南、彭山北、郫県西、深圳機場、雅安</li>
+          <li>新しい駅：成都西、福利区、哈爾濱西、漢中、連雲港、渑池南、彭山北、郫県西、深圳機場、雅安</li>
           <li>駅組案内を作成。新規作成した駅組は：福平線(線路)、甘肃蘭州(城市)、京張高速線(線路)</li>
           <li>コードを最適化、不要なデータを減らした。</li>
         </ul>
