--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -54,7 +54,7 @@
   </nav>
   <div class="container head">
     <p>推荐使用Mdict词典版本，查询更方便。Mdict官方网站：<a href="https://www.mdict.cn/wp/?lang=zh" target="_blank">www.mdict.cn/wp</a></p>
-    <p><a href="./tktMach2023c2.mdx" download><i class="fas fa-download"></i>下载词典 - 2023 年 11 月 30 日版本</a></p>
+    <p><a href="./tktMach2024a2.mdx" download><i class="fas fa-download"></i>下载词典 - 2024 年 1 月 3 日版本</a></p>
   </div>
   <div class="container">
     项目网址：
@@ -92,8 +92,8 @@
       <tr><td>5</td><td>北京南</td><td>47</td><td>56</td></tr>
       <tr><td>6</td><td>北京西</td><td>36</td><td>47</td></tr>
       <tr><td>7</td><td>杭州东</td><td>36</td><td>42</td></tr>
-      <tr><td>8</td><td>兰州</td><td>32</td><td>45</td></tr>
-      <tr><td>9</td><td>盐城</td><td>31</td><td>37</td></tr>
+      <tr><td>8</td><td>盐城</td><td>34</td><td>40</td></tr>
+      <tr><td>9</td><td>兰州</td><td>32</td><td>45</td></tr>
       <tr><td>10</td><td>南京</td><td>30</td><td>39</td></tr>
     </table>
   </div>
@@ -139,10 +139,10 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2023-12-17 (v3.8.12)
+        2024-01-03 (v3.8.13) 元旦快乐！
         <ul>
-          <li>新增车站：<var>茂县</var>、<var>三星堆</var>、<var>西来</var>、<var>长清</var>、<var>镇江关</var>、<var>涿州</var>、<var>涿州东</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 785 个，机器数量达 2301 台。</li>
+          <li>新增车站：<var>常平东</var>、<var>东莞</var>、<var>广阳</var>、<var>广州白云</var>、<var>淮南东</var>、<var>天府机场</var>、<var>资中北</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 792 个，机器数量达 2335 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
