--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-01-03 (v3.8.13) 元旦快乐！
+        <ul>
+          <li>新增车站：<var>常平东</var>、<var>东莞</var>、<var>广阳</var>、<var>广州白云</var>、<var>淮南东</var>、<var>天府机场</var>、<var>资中北</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 792 个，机器数量达 2335 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2023-12-17 (v3.8.12)
         <ul>
           <li>新增车站：<var>茂县</var>、<var>三星堆</var>、<var>西来</var>、<var>长清</var>、<var>镇江关</var>、<var>涿州</var>、<var>涿州东</var>。</li>
