--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,13 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-01-16 (v3.8.14)
+        <ul>
+          <li>新增车站：<var>景德镇北</var>、<var>罗江东</var>、<var>南昌东</var>、<var>南昌南</var>、<var>遂宁</var>、<var>樟木头</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 798 个，机器数量达 2349 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-01-03 (v3.8.13) 元旦快乐！
         <ul>
           <li>新增车站：<var>常平东</var>、<var>东莞</var>、<var>广阳</var>、<var>广州白云</var>、<var>淮南东</var>、<var>天府机场</var>、<var>资中北</var>。</li>
