--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,6 +61,13 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-01-16 (v3.8.14)
+        <ul>
+          <li>新しい駅：<var>景徳镇北</var>、<var>羅江東</var>、<var>南昌東</var>、<var>南昌南</var>、<var>遂寧</var>、<var>樟木頭</var>。</li>
+          <li>記録した駅組 31 個、駅 798 個、機器 2349 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-01-03 (v3.8.13) 新年あけましておめでとう！
         <ul>
           <li>新しい駅：<var>常平東</var>、<var>東莞</var>、<var>広阳</var>、<var>広州白雲</var>、<var>淮南東</var>、<var>天府機場</var>（成都天府国際空港）、<var>資中北</var>。</li>
