--- a/rail/tktAbout.html
+++ b/rail/tktAbout.html
@@ -86,7 +86,7 @@
     <table class="table">
       <tr><th>排名</th><th>车站</th><th>机器数</th><th>记录数</th></tr>
       <tr><td>1</td><td>郑州东</td><td>60</td><td>84</td></tr>
-      <tr><td>2</td><td>南京南</td><td>55</td><td>73</td></tr>
+      <tr><td>2</td><td>南京南</td><td>55</td><td>76</td></tr>
       <tr><td>3</td><td>长春</td><td>54</td><td>69</td></tr>
       <tr><td>4</td><td>郑州</td><td>51</td><td>74</td></tr>
       <tr><td>5</td><td>北京南</td><td>47</td><td>56</td></tr>
@@ -139,10 +139,10 @@
     <p class="text-muted" lang="ja">詳細な変更履歴は この<a class="link" href="helpUpdatehist.ja.html">ページ</a>へ。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
-        2024-01-03 (v3.8.13) 元旦快乐！
+        2024-01-16 (v3.8.14)
         <ul>
-          <li>新增车站：<var>常平东</var>、<var>东莞</var>、<var>广阳</var>、<var>广州白云</var>、<var>淮南东</var>、<var>天府机场</var>、<var>资中北</var>。</li>
-          <li>车站组总数达 31 个，车站总数达 792 个，机器数量达 2335 台。</li>
+          <li>新增车站：<var>景德镇北</var>、<var>罗江东</var>、<var>南昌东</var>、<var>南昌南</var>、<var>遂宁</var>、<var>樟木头</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 798 个，机器数量达 2349 台。</li>
         </ul>
       </li>
       <li class="list-group-item">
