--- a/index.html
+++ b/index.html
@@ -84,10 +84,26 @@
           <p lang="ja">
             <a href="./rail/tktMach2023c2.ja.mdx" download>ダウンロード：運転マスデータ Mdict (日本語 Japanese)</a>
           </p>
+          <p lang="en">
+            A bot <code>KinaRailBot</code>. Under development.
+          </p>
+          <p lang="en">
+            A HAM logger <code>KinaRailLogger</code>. Under development.
+          </p>
 
           <p>
           <a href="https://my.flightradar24.com/firetimer"><img src="https://banners-my.flightradar24.com/firetimer.png" alt="My Flightdiary.net profile" /></a>
           </p>
+
+          <!-- HRDLOG.net script start -->
+          <div id="hrdlog">www.hrdlog.net</div>
+          <script type="text/javascript" language="javascript" src="http://www.hrdlog.net/hrdlog.js"></script>
+          <script type="text/javascript" language="javascript">
+          var ohrdlog = new HrdLog('BI1MHK');
+          ohrdlog.LoadByCallsign();
+          ohrdlog.LoadLastQso(10);
+          </script>
+          <!-- HRDLOG.net script stop -->
         </article>
       </div>
     </div>
