--- a/rail/helpUpdatehist.html
+++ b/rail/helpUpdatehist.html
@@ -70,6 +70,15 @@
     </p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-01-31 (v3.8.15)
+        <ul>
+          <li>春节临近，事务繁多，更新可能延迟，敬请谅解。</li>
+          <li>新增了一种票纸：蓝报销凭证（黑体居中，2023年新型）票纸。</li>
+          <li>新增车站：<var>抚远</var>、<var>金坛</var>、<var>蒲江</var>、<var>钦州东</var>、<var>引镇</var>。</li>
+          <li>车站组总数达 31 个，车站总数达 803 个，机器数量达 2393 台。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-01-16 (v3.8.14)
         <ul>
           <li>新增车站：<var>景德镇北</var>、<var>罗江东</var>、<var>南昌东</var>、<var>南昌南</var>、<var>遂宁</var>、<var>樟木头</var>。</li>
