--- a/rail/helpUpdatehist.ja.html
+++ b/rail/helpUpdatehist.ja.html
@@ -61,9 +61,18 @@
     <p>これは完全な変更履歴です。内容の増加・版式の調整等は記録されないかもしれないので、ご注意ください。</p>
     <ul class="list-group">
       <li class="list-group-item border border-primary">
+        2024-01-31 (v3.8.15)
+        <ul>
+          <li>春節が近づき、事務が多く、更新が遅れる可能性がありますので、ご了承ください。</li>
+          <li>新しい券紙を追加：<var>藍領収書（ゴシック体居中，2023年新型）券紙</var>。</li>
+          <li>新しい駅：<var>撫远</var>、<var>金壇</var>、<var>蒲江</var>、<var>欽州東</var>、<var>引鎮</var>。</li>
+          <li>記録した駅組 31 個、駅 803 個、機器 2393 個。</li>
+        </ul>
+      </li>
+      <li class="list-group-item">
         2024-01-16 (v3.8.14)
         <ul>
-          <li>新しい駅：<var>景徳镇北</var>、<var>羅江東</var>、<var>南昌東</var>、<var>南昌南</var>、<var>遂寧</var>、<var>樟木頭</var>。</li>
+          <li>新しい駅：<var>景徳鎮北</var>、<var>羅江東</var>、<var>南昌東</var>、<var>南昌南</var>、<var>遂寧</var>、<var>樟木頭</var>。</li>
           <li>記録した駅組 31 個、駅 798 個、機器 2349 個。</li>
         </ul>
       </li>
@@ -659,7 +668,7 @@
         <ul>
           <li>新しい駅：<var>大冶北</var>、<var>華山北</var></li>
         <li>
-          新しい駅組：<var>宝成、成渝線(線路)</var>、<var>昌福線(線路)</var>、<var>成渝高速線(線路)</var>、<var>抚顺線(線路)</var>、<var>広九線(線路)</var>、<var>広深港高速線(線路)</var>、<var>杭深線(線路)</var>、<var>遼寧沈阳(城市)</var>、<var>沈丹客専線(線路)</var>
+          新しい駅組：<var>宝成、成渝線(線路)</var>、<var>昌福線(線路)</var>、<var>成渝高速線(線路)</var>、<var>撫顺線(線路)</var>、<var>広九線(線路)</var>、<var>広深港高速線(線路)</var>、<var>杭深線(線路)</var>、<var>遼寧沈阳(城市)</var>、<var>沈丹客専線(線路)</var>
         </li>
         </ul>
       </li>
