--- a/rail/tktGener.html
+++ b/rail/tktGener.html
@@ -167,6 +167,7 @@
             <option value="1">蓝票（黑体空两格）票纸</option>
             <option value="2">蓝票（宋体左对齐）票纸</option>
             <option value="3">蓝票（黑体左对齐）票纸</option>
+            <option value="7">蓝报销凭证（黑体居中，2023年新型）票纸</option>
             <option value="10">蓝票（黑体其他）票纸</option>
             <option value="102">蓝票（宋体居中）票纸</option>
             <option value="103">蓝票（宋体左对齐，旧版1）票纸</option>
